--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,14 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: update
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      password: password
+
+# Todo : raw_key 변경 후 환경변수 처리
+jwt:
+  expiration-minutes: 15
+  expiration-days: 7
